# ROSpcl

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  mainpage.dox  manifest.xml  manifest.xml~
src/: .pclFiltersKinect.cpp.swp  createFaceDatabase.cpp  createFaceDatabase.cpp~  eigenFacesTraining.cpp  eigenFacesTraining.cpp~  faceDetection.cpp  faceDetection.cpp~  faceRecog.cpp  faceRecog.cpp~  fileWriteTest.cpp  fileWriteTest.cpp~  imageDepthNodeGenerator.cpp~  kinectDataTest.cpp  kinectDataTest.cpp~  kinectPclFilters.cpp~  kinectSplitter.cpp  kinectSplitter.cpp~  opencv2Test.cpp  opencv2Test.cpp~  opencvImageSubscriber.cpp  opencvImageSubscriber.cpp~  opencvTest.cpp  opencvTest.cpp~  pclFiltersKinect.cpp  pclFiltersKinect.cpp~  testBuild.cpp  testBuild.cpp~
